fix desktop layout bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,4 +5,8 @@
 .App {
   height: 100vh;
   height: var(--app-height);
+  &__sections {
+    max-width: 900px;
+    margin: 0 auto;
+  }
 }
