--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,11 +1,3 @@
-.About {
-  &__hr {
-    height: 2px;
-    background: lightgrey;
-    border-radius: 0.25rem;
-  }
-}
-
 .Member {
   color: grey;
   text-align: center;
